...
                                    <outlet property="delegate" destination="Y6W-OH-hqX" id="KQ0-OX-meF"/>
                                </connections>
                            </searchBar>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qfI-db-lY7">
                                <rect key="frame" x="414" y="88" width="0.0" height="51"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="mapButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" id="4lI-SQ-S49"/>
                                    <constraint firstAttribute="height" constant="51" id="Fhj-76-Ol3"/>
                                </constraints>
                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal">
...
                            <connections>
                                <action selector="loadData" destination="Y6W-OH-hqX" id="YMW-qb-OmB"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="collectionView" destination="bPQ-vh-q2b" id="8ch-xT-mXJ"/>
                        <outlet property="collectionViewBottomConstraint" destination="k3H-zR-9Iy" id="gsS-Gy-ywh"/>
                        <outlet property="mapButton" destination="qfI-db-lY7" id="Eo6-ti-fpd"/>
                        <outlet property="mapButtonWidthConstraint" destination="4lI-SQ-S49" id="nkn-DW-QGx"/>
                        <outlet property="searchBar" destination="PrF-rH-SMz" id="IpU-5J-9jd"/>
                    </connections>
                </viewController>
...
